# musicandrap-ai4ose

./: 02.11.md  2.23.md  README.md  git.bat  git.sh
ch1/: Cargo.toml  README.md
ch1/src/: main.rs
ch2/: Cargo.toml  README.md  build.rs  test.sh
ch2/src/: main.rs
ch3/: exercise.md
ch3/src/: main.rs  task.rs
ch4/: Cargo.toml  README.md  build.rs  exercise.md  test.sh
ch4/src/: main.rs  process.rs
ch5/: Cargo.toml  README.md  build.rs  exercise.md  test.sh
ch5/src/: main.rs  process.rs  processor.rs
ch6/: Cargo.toml  README.md  build.rs  exercise.md  test.sh
ch6/.cargo/: config.toml
ch6/src/: fs.rs  main.rs  process.rs  processor.rs
ch6/tg-easy-fs/: .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig  README.md
ch6/tg-easy-fs/src/: efs.rs  file.rs  vfs.rs
ch7/: Cargo.toml  README.md  build.rs  test.sh
ch7/.cargo/: config.toml
ch8/: Cargo.toml  README.md  build.rs  exercise.md  test.sh
ch8/.cargo/: config.toml
ch8/src/: main.rs  process.rs
doc/: plan-2.11-16.md.md  result-2.11-16.md
myos/: Cargo.toml  README.md  build.rs  test.sh
myos-ch1/: Cargo.toml  build.rs  rust-toolchain.toml
myos-ch1/.cargo/: config.toml
myos-ch1/src/: main.rs
