[package]
name = "tg-ch2"
description = "Chapter 2 of rCore Tutorial: Batch processing system with privilege levels and trap handling."
version = "0.3.1-preview.3"
edition = "2024"
authors = ["YdrMaster <ydrml@hotmail.com>","Yifan Wang<w-yf22@mails.tsinghua.edu.cn>","Yu Chen <yuchen@tsinghua.edu.cn>"]
repository = "https://github.com/rcore-os/rCore-Tutorial-in-single-workspace"
homepage = "https://github.com/rcore-os/rCore-Tutorial-in-single-workspace/tree/test"
documentation = "https://docs.rs/tg-ch2"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["rcore", "tutorial", "no-std", "riscv", "batch-system"]
categories = ["no-std", "embedded"]
exclude = [
    "tg-user/**",
#    ".cargo/config.toml",
]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
riscv = "0.10.1"

tg-sbi = { version = "0.1.0-preview.1", features = ["nobios"] }
tg-linker = { version = "0.1.0-preview.2" }
tg-console = { version = "0.1.0-preview.2" }
tg-kernel-context = { version = "0.1.0-preview.1" }
tg-syscall = { version = "0.1.0-preview.2", features = ["kernel"] }

[build-dependencies]
tg-linker = { version = "0.1.0-preview.2" }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
