[package]
name = "tg-ch7"
description = "Chapter 7 of rCore Tutorial: Inter-process communication with pipe and signal handling."
version = "0.4.2-preview.1"
edition = "2024"
authors = ["YdrMaster <ydrml@hotmail.com>","Yifan Wang<w-yf22@mails.tsinghua.edu.cn>","Yu Chen <yuchen@tsinghua.edu.cn>"]
repository = "https://github.com/rcore-os/tg-rcore-tutorial"
homepage = "https://github.com/rcore-os/tg-rcore-tutorial/tree/test"
documentation = "https://docs.rs/tg-ch7"
license = "GPL-3.0"
readme = "README.md"
keywords = ["rcore", "tutorial", "no-std", "riscv", "ipc"]
categories = ["no-std", "embedded"]
exclude = [
    "tg-user/**",
#    ".cargo/config.toml",
]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
virtio-drivers = "0.1.0"
xmas-elf = "0.8.0"
riscv = "0.10.1"
spin = "0.9"

tg-sbi = { version = "0.4.2-preview.1", features = ["nobios"] }
tg-linker = { version = "0.4.2-preview.1" }
tg-console = { version = "0.4.2-preview.1" }
tg-kernel-context = { version = "0.4.2-preview.1", features = ["foreign"] }
tg-kernel-alloc = { version = "0.4.2-preview.1" }
tg-kernel-vm = { version = "0.4.2-preview.1" }
tg-syscall = { version = "0.4.2-preview.1", features = ["kernel"] }
tg-task-manage = { version = "0.4.2-preview.1", features = ["proc"] }
tg-easy-fs = { version = "0.4.2-preview.1" }
tg-signal = { version = "0.4.2-preview.1" }
tg-signal-impl = { version = "0.4.2-preview.1" }

[build-dependencies]
tg-linker = { version = "0.4.2-preview.1" }
tg-easy-fs = { version = "0.4.2-preview.1" }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
